# =============================================================================
# omni-kernel — OMNI OS microkernel
# =============================================================================
# The Rust microkernel: memory management, scheduling, IPC primitives, and
# capability-based security. The kernel TCB is intentionally small;
# everything that can run in user space (drivers, filesystems, networking,
# AI runtime) does.
#
# Default build is `std` (so the workspace compiles end-to-end on developer
# machines and CI). The `bare-metal` feature switches the crate to
# `no_std + no_main` for the real kernel binary; that transition lands per
# `/oips/oip-kernel-003.md` (P6.1 / P6.2 — UEFI bootloader integration).
# =============================================================================

[package]
name             = "omni-kernel"
description      = "OMNI OS microkernel — capability-based, message-passing, written in Rust."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
authors.workspace      = true
license.workspace      = true
repository.workspace   = true
homepage.workspace     = true
keywords.workspace     = true
categories.workspace   = true
readme.workspace       = true

[lints]
workspace = true

# -----------------------------------------------------------------------------
# Feature flags
# -----------------------------------------------------------------------------
# `bare-metal` switches `lib.rs` to `#![no_std]` + `#![no_main]` and disables
# every code path that uses libstd. Without the flag the crate compiles as a
# normal Rust library so the workspace stays buildable end-to-end on
# developer machines without a TDX-capable target.
# -----------------------------------------------------------------------------
[features]
default     = []
bare-metal  = []

[dependencies]
# `omni-types` is the only first-party dep K3 needs: `bare_metal::panic`
# encodes its `PanicRecord` via `omni_types::wire::encode_into_slice`.
# Future modules (capabilities, IPC, syscall dispatch) will reintroduce
# `omni-capability` and `omni-tee` as deps once they consume those
# crates' types — at present the kernel's internal traits/types are
# self-contained and pulling those deps only inflates the compile
# closure (and breaks the bare-metal cross-build because their
# transitive `getrandom`/`cmov` chain has no `x86_64-unknown-none`
# implementation).
# Bare-metal kernel cannot use `workspace = true` for omni-types
# because `id-generation` (default-enabled) pulls `uuid` + `getrandom`,
# neither of which build on `x86_64-unknown-none`. Pin path + version
# directly with `default-features = false` to opt out cleanly.
omni-types      = { path = "../omni-types", version = "0.1.0", default-features = false }
# `serde` is required by `bare_metal::panic::PanicRecord` (derive
# Serialize). The workspace pins `default-features = false` + `derive`
# + `alloc`, so the kernel pulls `serde` without `std`. OIP-Kernel-012
# § S1.
serde           = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
