[package]
name = "omni-net"
description = "Userspace TCP/IP network stack service for OMNI OS."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[lints]
workspace = true

[dependencies]
omni-types = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
